Wrote sample datasets and a custom dataset class

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -45,6 +45,25 @@
     "\t\tlogits = self.all_layers(x)\n",
     "\t\treturn logits"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset, Data normalization, and Dataloader\n",
+    "\n",
+    "Given the data below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = torch.tensor([245.0, 273.0, 304.0, 331.0, 347.0, 360.0, 387.0, 438.0, 493.0, 547.0]).view(-1,1)\n",
+    "y_train = torch.tensor([232.3, 241.1, 257.4, 301.5, 324.6, 350.2, 362.3, 389.0, 398.2, 401.8])"
+   ]
   }
  ],
  "metadata": {
