Wrote notes about the training loop

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -129,6 +129,27 @@
     "\tshuffle=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Loop\n",
+    "\n",
+    "The code for the training is very similar to the classification example from lecture, so I'd like to analyze the code in this report.\n",
+    "Before the training loop, we do a bit of setup. We first set a seed by calling `torch.manual_seed()` to ensure reproducibility of results in this report.\n",
+    "We then initialize our MLP model and optimizer. The MLP model takes in the number of features (which is 1 in our case). Our optimizer will use the Stochastic Gradient Descent algorithm with parameters from our MLP model and a learning rate of 0.5.\n",
+    "\n",
+    "### Stochastic Gradient Descent (SGD)\n",
+    "SGD is an optimization algorithm used to minimize the loss function in deep learning models. Stochastic refers to how the gradient is computed and the weights are updated for each training batch, as opposed to the entire training dataset.\n",
+    "\n",
+    "### Learning Rate\n",
+    "The learning rate is a hyperparameter of the optimization algorithm that determines the step size of each iteration when moving towards a minimum of the loss function. It controls how much we adjust the model in response to the estimated error each time the model weights are updated.\n",
+    "\n",
+    "A high learning rate result in the model converging faster, but can overshoot the optimal point. This could even lead to higher loss or the model may fail to converge entirely.\n",
+    "\n",
+    "A low learning rate will converge slowly, which may allow the model to reach a more precise loss minimum at the cost of time. There's a chance that the model can get stuck in an undesired local minimum."
+   ]
   }
  ],
  "metadata": {
