Wrote more notes on training loop, along with some set up code

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -150,6 +150,47 @@
     "\n",
     "A low learning rate will converge slowly, which may allow the model to reach a more precise loss minimum at the cost of time. There's a chance that the model can get stuck in an undesired local minimum."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "model = MLP(num_features=1)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now comes the actual training loop. We declare the number of epochs and a list to store the loss value at the end of each epoch. These loss values are used later to visually see our loss regression on a graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 200 \n",
+    "losses = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then create our training loop to run `num_epochs` times. At the beginning of each epoch iteration, we set our `model` to training mode, as opposed to evaluation mode with `model.train()`.\n",
+    "\n",
+    "With each epoch iteration, we create a batch loop which iterates through our dataset.\n",
+    "\n",
+    "Each batch iteration will retrieve the features and labels, passes the features into our model to get predictions, and calculates the loss for that batch by using `torch.nn.functional.mse_loss()`. We then call `zero_grad()` on our optimizer to set the gradients of all model parameters to zero as gradients accumlate by default in PyTorch. We call `backward()` to compute the gradient of the loss with respect to the model and then updates the model parameters with the newly calculated gradient by calling `step()` on the optimizer.\n",
+    "\n",
+    "At the end of each batch, we add our loss to the `losses` list."
+   ]
   }
  ],
  "metadata": {
