Wrote training loop

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -191,6 +191,27 @@
     "\n",
     "At the end of each batch, we add our loss to the `losses` list."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model = model.train()\n",
+    "    for batch_idx, (features, labels) in enumerate(train_loader):\n",
+    "        preds = model(features)\n",
+    "        loss = F.mse_loss(preds.squeeze(), labels.float())\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "    losses.append(loss.item())"
+   ]
   }
  ],
  "metadata": {
