Started on evaluation of the model. Normalized the new x range

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -212,6 +212,43 @@
     "        \n",
     "    losses.append(loss.item())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion - Evaluating the Model\n",
+    "\n",
+    "We can now plot the regression curve! We start off by generating the points as x values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_range = torch.arange(200, 600, 0.1).view(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then normalize these points from the `x_mean` and `x_std` from earlier, and use normalized points to make predictions from our now trained model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_range_normalized = (X_range - X_mean) / X_std\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_range_preds = model(X_range_normalized)"
+   ]
   }
  ],
  "metadata": {
