Unnormalized the output of y range

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -249,6 +249,31 @@
     "with torch.no_grad():\n",
     "    y_range_preds = model(X_range_normalized)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we un-normalize the prediction values using the original `y_mean` and `y_std`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_range_unnormalized = (y_range_preds.squeeze() * y_std) + y_mean\n",
+    "y_range_unnormalized = y_range_unnormalized.numpy()\n",
+    "X_range = X_range.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This provides us with everything we need to plot the regression curve! Notice that the curve is non-linear because we used the Sigmoid activation function."
+   ]
   }
  ],
  "metadata": {
