Wrote code to graph the regression curve

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -274,6 +274,25 @@
    "source": [
     "This provides us with everything we need to plot the regression curve! Notice that the curve is non-linear because we used the Sigmoid activation function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(X_train, y_train, color='blue', label='Training data', s=100)\n",
+    "plt.plot(X_range, y_range_unnormalized, color='red', label='Regression curve')\n",
+    "plt.xlabel('X values')\n",
+    "plt.ylabel('Predictions')\n",
+    "plt.title('MLP Regression Curve with Non-Linear Activation')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
