Graphed training loss over epochs

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -293,6 +293,28 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also plot our trainning losses that we were keeping track of earlier. Notice how the training loss decreases and eventually plateaus over more epochs. This plateaus may be an indication that the model has effectively converged with the current hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(losses)\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Traning Loss')\n",
+    "plt.title('Training Loss over Epochs')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
