Tried changing hyperparameters

--- a/linear-regression.ipynb
+++ b/linear-regression.ipynb
@@ -315,6 +315,72 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Changing Hyperparameters\n",
+    "The above regression curve and training loss values are based on the hyperparameters coded into the MLP class. Specifically these values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%script echo Skipping\n",
+    "class MLP(torch.nn.Module):\n",
+    "\tdef __init__(self, num_features):\n",
+    "\t\tsuper().__init__()\n",
+    "\t\tself.all_layers = torch.nn.Sequential(\n",
+    "            # 1st hidden layer\n",
+    "            torch.nn.Linear(num_features, 5),\n",
+    "            torch.nn.Sigmoid(),\n",
+    "            # 2nd hidden layer\n",
+    "            torch.nn.Linear(5, 2),\n",
+    "            torch.nn.Sigmoid(),\t\t\t\t\t\t  \n",
+    "            # output layer\n",
+    "            torch.nn.Linear(2, 1),\n",
+    "        )\n",
+    "\n",
+    "\tdef forward(self, x):\n",
+    "\t\tlogits = self.all_layers(x)\n",
+    "\t\treturn logits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To experiment, we can change these hyperparameters and see the change to the regression curve and training loss values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(torch.nn.Module):\n",
+    "\tdef __init__(self, num_features):\n",
+    "\t\tsuper().__init__()\n",
+    "\t\tself.all_layers = torch.nn.Sequential(\n",
+    "            # 1st hidden layer\n",
+    "            torch.nn.Linear(num_features, 15),\n",
+    "            torch.nn.Sigmoid(),\n",
+    "            # 2nd hidden layer\n",
+    "            torch.nn.Linear(15, 7),\n",
+    "            torch.nn.Sigmoid(),\t\t\t\t\t\t  \n",
+    "            # output layer\n",
+    "            torch.nn.Linear(7, 1),\n",
+    "        )\n",
+    "\n",
+    "\tdef forward(self, x):\n",
+    "\t\tlogits = self.all_layers(x)\n",
+    "\t\treturn logits"
+   ]
   }
  ],
  "metadata": {
